--- a/Session_3/DESeq2-Introduction.qmd
+++ b/Session_3/DESeq2-Introduction.qmd
@@ -398,7 +398,7 @@ http://www.ensembl.org
 You will need to generate this yourself and save it in tab seperated format
 
 ```{r}
-sample_table <- read_tsv("data/SampleDescription.tsv")
+sample_table <- read_tsv("data/sample_description.tsv")
 sample_table  %>%
   head(n = 6) %>%
   kbl() %>%
@@ -569,7 +569,10 @@ DESeq2Table <- DESeqDataSetFromMatrix(countData = feature.counts.table,
 The interaction term added to the experimental design model **Genotype:Condition**, enables DESeq2 to account for the Condition (treatment), the background Genotype effect as well as the interaction between the different Genotypes and the Condition.
 
 ## Time Course
+::: columns
 
+::: {.column width="50%"}
+Pairwise comparison - compares expression at time points
 ```{r}
  
 time <- read_tsv("./data/time_course_table.tsv") %>%
@@ -584,9 +587,27 @@ mean <- time %>%
 time <- left_join(time,mean)
   
 
-ggplot(time, aes(x = Time, y = Expression, fill = Condition)) +
+ggplot(time, aes(x = Time,  y = Expression, fill = Condition)) +
   geom_point(shape = 21, size = 4) +
   geom_errorbar(aes(ymin = Mean, ymax = Mean), width = 0.4, colour = "grey") +
+  scale_x_discrete(limits = unique(time$Time)) +
+  ylim(0,4) +
+  polyomics_theme() +
+  theme(legend.position = "none",
+        axis.line = element_line(colour = "grey"),
+        axis.title.x=element_blank(),
+        panel.grid.major.y = element_blank(),
+        panel.grid.major.x = element_blank(),
+        panel.grid.minor = element_blank(),
+        panel.background = element_blank())
+```
+:::
+
+:::{.column width="50%"}
+Want to compare changes in expression with respect to Treatment **and** Time
+```{r}
+ggplot(time, aes(x = Time,  y = Expression, fill = Condition)) +
+  geom_point(shape = 21, size = 4) +
   stat_summary(fun="mean", geom="line", aes(group=factor(Condition)), colour = "grey") +
   scale_x_discrete(limits = unique(time$Time)) +
   ylim(0,4) +
@@ -600,7 +621,14 @@ ggplot(time, aes(x = Time, y = Expression, fill = Condition)) +
         panel.background = element_blank())
 ```
 
+:::
+
+:::
+
 ## Time Course
+
+### Likelihood Ratio Testing (LRT)
+Analyse all levels of a factor at once. LRT identifies genes that change expression across the different levels.
 
 ```{r}
  
@@ -635,25 +663,6 @@ ggplot(time, aes(x = Time, y = Expression, fill = Condition)) +
 
 ## Time Course {.smaller}
 
-```{r}
-time  %>%
-  select(c(-Expression,-Mean)) %>%
-  mutate(Batch = unlist(str_split(rep(strrep(c("A", "B", "C"), 5),2),""))) %>%
-  head(n = 10) %>%
-  kbl() %>%
-  kable_styling()
-```
-
-## Time Course {.smaller}
-
-Construct the model matrix using the code below
-
-```{r}
-#| echo: true
-#| eval: false
-model.matrix(~ Batch + Condition + Time + Condition:Time, sample_table)
-```
-
 Differential expression command
 
 -   Full model
@@ -673,8 +682,12 @@ DESeq2 <- DESeqDataSetFromMatrix(countData = feature.counts.table,
 #| eval: false
 DESeq2 <- DESeq(DESeq2,
                 test = "LRT",
-                design = ~  Batch + Time)
+                reduced = ~  Batch + Condition + Time)
 ```
+
+The p-values are determined solely by the difference in deviance between the **Full** and **Reduced** model formula (not log2 fold changes)
+
+## Tutorial
 
 ## CRAN packages {.smaller}
 
@@ -684,13 +697,7 @@ DESeq2 <- DESeq(DESeq2,
 #| output: false
 
 cran.packages <- c("tidyverse",
-                   "ggplotify",
-                   "ggrepel",
-                   "gplots",
-                   "RColorBrewer",
-                   "pheatmap",
-                   "devtools"
-                   )
+                   "devtools")
 
 cran.load <- function(pkg){
         new.pkg <- pkg[!(pkg %in% installed.packages()[, "Package"])]
@@ -709,9 +716,11 @@ cran.load(cran.packages)
 #| code-overflow: scroll
 #| output: false
 
-biomart.packages <- c("DESeq2")
+bioconductor.packages <- c("DESeq2",
+                      "biomaRt",
+                      "org.Mm.eg.db")
 
-biomart.load <- function(pkg){
+bioconductor.load <- function(pkg){
         new.pkg <- pkg[!(pkg %in% installed.packages()[, "Package"])]
         if (length(new.pkg)){
           if (!requireNamespace("BiocManager", quietly = TRUE))
@@ -720,7 +729,7 @@ biomart.load <- function(pkg){
         }
         sapply(pkg, require, character.only = TRUE)
 }
-biomart.load(biomart.packages)
+bioconductor.load(bioconductor.packages)
 ```
 
 ## Github Packages {.smaller}
@@ -745,8 +754,9 @@ git.load(git.packages)
 
 ## Set Up
 
-
 ### Results directory
+
+Firstly, We will create a directory to save differential expression data
 
 ```{r}
 #| echo: true
@@ -757,21 +767,23 @@ dir.create(deseq2_results_dir, showWarnings = FALSE)
 
 ### Statistical cut off values
 
+Create the cut off used for filtering results
+
 ```{r}
 #| echo: true
-pvalueCutoff <- 0.05
-qvalueCutoff <- 0.1
-foldchange <- 1
+pvalueCutoff <- 0.05 # P value
+qvalueCutoff <- 0.1 # Adjusted P value
+foldchange <- 1 # Fold change, usually fold change is log2
 ```
 
-## Set Up
+## Set Up {.smaller}
 
 ### Samples
 
 ```{r}
 #| echo: true
 #| code-line-numbers: "1"
-sample_table <- read_tsv("./data/SampleDescription.tsv",col_types = "ff")
+sample_table <- read_tsv("./data/sample_description.tsv",col_types = "ff")
 sample_table  %>%
   head(n = 6) %>%
   kbl() %>%
@@ -809,7 +821,7 @@ feature.counts.table <- read_tsv("./data/feature_counts_table.tsv") %>%
 
 # Ensure that the counts table is in the same order as the sample table
 feature.counts.table <- feature.counts.table %>%
-  select(c(sample_table$Sample))
+  dplyr::select(c(sample_table$Sample))
 
 feature.counts.table %>%
   head(n = 3) %>%
@@ -831,7 +843,7 @@ files <- list.files("./data/htseq_counts/") %>%
   str_replace_all("-","_") %>%
   as.data.frame %>%
   rename(files = ".") %>% 
-  bind_cols(read_tsv("./data/SampleDescription.tsv",col_types = "cf"))
+  bind_cols(read_tsv("./data/sample_description.tsv",col_types = "cf"))
 
 sampleDataFrame <- data.frame(sampleName = files$Sample,
                       fileName = files$files,
@@ -865,6 +877,14 @@ total.norm.counts <- counts(estimateSizeFactors(dds), normalized = TRUE) %>%
 write_tsv(total.norm.counts,"normalised_read_counts.tsv")
 ```
 
+```{r}
+#| echo: true
+total.norm.counts <- estimateSizeFactors(dds) %>%
+  counts(normalized = TRUE) %>%
+  as.data.frame() %>%
+  rownames_to_column(var = "Ensembl_ID")
+write_tsv(total.norm.counts,"normalised_read_counts.tsv")
+```
 ## Differential Expression
 
 ### DESeq2 using htseq-count files
