--- a/Session_3/Session_3_DESeq2_Introduction.qmd
+++ b/Session_3/Session_3_DESeq2_Introduction.qmd
@@ -101,7 +101,7 @@ style id9 fill:#006630,stroke:#006630,stroke-width:4px,color:#fff
 
 -   DESeq2 requires a counts matrix of raw counts
 -   Each row is a gene or feature
--   Each column is the number ofreads that align to that gene
+-   Each column is the number of reads that align to that gene
 -   The higher the number of reads that align to a gene relates to the level of expression
 
 |              | Sample 1 | Sample 2 | Sample 3 |
@@ -188,6 +188,7 @@ With RNASeq data there are a large number of genes and the probability of pullin
 ::: columns
 
 ::: {.column width="50%"}
+::: {style="font-size: 75%;"}
 ```{r}
 #| echo: false
 mean_counts <- apply(counts_table[,1:3], 1, mean)
@@ -201,11 +202,12 @@ ggplot(df) +
   geom_abline(intercept = 0, slope = 1, color="red") +
   theme_bw()
 ```
-Each point represents a gene <br> ßRed line represents the mean
-
+Each point represents a gene <br> Red line represents the mean
+:::
 :::
 
 ::: {.column width="50%"}
+::: {style="font-size: 75%;"}
 
 1)  Variance across the replicates tends to be greater than the mean
 2)  Genes with low mean counts show more scatter
@@ -216,6 +218,7 @@ Each point represents a gene <br> ßRed line represents the mean
 
     -   May require more than 20 replicates.
 
+:::
 :::
 
 :::
@@ -236,7 +239,6 @@ example_table <- read_tsv("./data/example_table.tsv") %>%
   as.data.frame()
 
 example_table%>%
-  select(-Sample3) %>%
   kbl() %>%
   kable_styling()
 ```
@@ -254,9 +256,9 @@ example_table %>%
 -   Calculate a scaling factor for each sample
 -   Accounting for read depth and library composition
 
-## Library Composition {.smaller}
+## Library Normalisation {.smaller}
 
-::: {style="font-size: 75%;"}
+::: {style="font-size: 60%;"}
 ```{r}
 example_table %>%
   slice_head(n = 3) %>%
@@ -297,14 +299,15 @@ log_example_table %>%
 :::
 :::
 
-## Library Composition {.smaller}
+## Library Normalisation {.smaller}
 -   DESeq2 uses log~*e*~ (log base *e*), raise *e* to the log value to get the original count
 -   The log of a zero is **-Infinity**
 -   Adding **-Infinity** to a number always results in **-Infinity**
--   Geometric averages lessen the effect of outliers
+-   Geometric averages - lessen the effect of outliers
 
-## Library Composition {.smaller}
+## Library Normalisation {.smaller}
 
+::: {style="font-size: 75%;"}
 Step 3. Remove genes with a geometric average value ***-Inf***
 
 ```{r}
@@ -319,7 +322,7 @@ inf_removed %>%
 
 <br>
 
-Step 4. Subtract the average log values from the log of the counts
+Step 4. Subtract the average log values, calculated in step 2, from the log of the counts
 
 ```{r}
 average <- inf_removed %>%
@@ -331,8 +334,11 @@ average_sub %>%
   kable_styling()
 ```
 
-## Library Composition {.smaller}
+:::
 
+## Library Normalisation {.smaller}
+
+::: {style="font-size: 75%;"}
 Step 5. Calculate the median of the ratios for each sample
 
 ```{r}
@@ -363,8 +369,11 @@ median_values %>%
   kable_styling() 
 ```
 
-## Library Composition {.smaller}
+:::
 
+## Library Normalisation {.smaller}
+
+::: {style="font-size: 75%;"}
 Step 7. Divide the original counts by the scaling factors
 
 #### Original read counts {style="text-align: center;"}
@@ -388,6 +397,8 @@ example_table %>%
   kbl() %>%
   kable_styling() 
 ```
+
+:::
 
 ## Required Files {.smaller}
 
@@ -434,6 +445,8 @@ sample_table  %>%
 
 ## Pairwise {.smaller}
 
+::: {style="font-size: 75%;"}
+
 Sample description file
 
 | Sample      | Condition |
@@ -455,9 +468,11 @@ DESeq2Table <- DESeqDataSetFromMatrix(countData = feature_counts_table,
                                       colData = sample_table,
                                       design = ~  Condition)
 ```
+:::
 
 ## Batch effects {.smaller}
 
+::: {style="font-size: 75%;"}
 Sample description file
 
 | Sample      | **Batch** | Condition |
@@ -480,9 +495,25 @@ DESeq2Table <- DESeqDataSetFromMatrix(countData = feature_counts_table,
                                       colData = sample_table,
                                       design = ~  Batch + Condition)
 ```
+:::
 
 ## Multifactorial {.smaller}
-Unlike batch effects, multifactorial design doesn't just correct for background effects, it test whether a factor is "interacting" with the treatment.
+
+Sample description file
+
+| Sample         | **Batch** | Condition | Genotype |
+|:---------------|:---------:|-----------|:--------:|
+| D_drug_1\_X    |   **A**   | D_drug    |    X     |
+| D_drug_2\_X    |   **B**   | D_drug    |    X     |
+| D_No_drug_1\_X |   **A**   | D_No_drug |    X     |
+| D_No_drug_2\_X |   **B**   | D_No_drug |    X     |
+| D_drug_1\_Y    |   **A**   | D_drug    |    Y     |
+| D_drug_2\_Y    |   **B**   | D_drug    |    Y     |
+| D_No_drug_1\_Y |   **A**   | D_No_drug |    Y     |
+| D_No_drug_2\_Y |   **B**   | D_No_drug |    Y     |
+
+## Multifactorial {.smaller}
+Unlike batch effects, multifactorial design doesn't just correct for background effects, it tests whether a factor is "interacting" with the treatment.
 ```{r}
 mult <- read_tsv("./data/multifactorial_table.tsv", col_types = "fdff") %>%
   unite("Names",Sample,Genotype, sep = "_", remove = FALSE) %>%
@@ -534,21 +565,6 @@ ggplot(mult, aes(x = Names, y = Expression, colour = Names, shape = Genotype)) +
         panel.grid.minor = element_blank(),
         panel.background = element_blank())
 ```
-
-## Multifactorial {.smaller}
-
-Sample description file
-
-| Sample         | **Batch** | Condition | Genotype |
-|:---------------|:---------:|-----------|:--------:|
-| D_drug_1\_X    |   **A**   | D_drug    |    X     |
-| D_drug_2\_X    |   **B**   | D_drug    |    X     |
-| D_No_drug_1\_X |   **A**   | D_No_drug |    X     |
-| D_No_drug_2\_X |   **B**   | D_No_drug |    X     |
-| D_drug_1\_Y    |   **A**   | D_drug    |    Y     |
-| D_drug_2\_Y    |   **B**   | D_drug    |    Y     |
-| D_No_drug_1\_Y |   **A**   | D_No_drug |    Y     |
-| D_No_drug_2\_Y |   **B**   | D_No_drug |    Y     |
 
 ## Multifactorial {.smaller}
 
@@ -762,7 +778,9 @@ git.load(git.packages)
 
 ## Set Up {.smaller}
 
+
 ### Statistical cut off values
+
 
 Create the cut off used for filtering results
 
@@ -773,19 +791,29 @@ qvalueCutoff <- 0.1 # Adjusted P value
 foldchange <- 1 # Fold change, usually fold change is log2
 ```
 
+
 ## Set Up {.smaller}
 
 ### Samples
 
+::: {style="font-size: 75%;"}
 ```{r}
 #| echo: true
 #| code-line-numbers: "1"
 sample_table <- read_tsv("./data/sample_description.tsv",col_types = "ff")
+```
+:::
+
+<br>
+```{r}
+#| echo: false
+#| eval: true
 sample_table  %>%
   head(n = 6) %>%
   kbl() %>%
-  kable_styling() 
+  kable_styling()
 ```
+
 
 ## Set Up {.smaller}
 
@@ -796,16 +824,25 @@ sample_table  %>%
 #| code-line-numbers: "2"
 # Import comparisons files and set column type to factors, this is an example for a comparisons table with a sample name and treanment column.
 comparisons <- read_tsv("./data/comparisons.tsv",col_types = "ff")
+```
+
+<br>
+```{r}
+#| echo: false
+#| eval: true
 comparisons%>%
   as.data.frame%>%
   head(n = 6) %>%
   kbl() %>%
-  kable_styling() 
+  kable_styling()
 ```
+
 
 ## Set Up {.smaller}
 
 ### Feature counts
+
+::: {style="font-size: 75%;"}
 
 Read in the feature counts table -featurecounts, from Rsubread package
 
@@ -820,11 +857,19 @@ feature_counts_table <- read_tsv("./data/feature_counts_table.tsv") %>%
 feature_counts_table <- feature_counts_table %>%
   dplyr::select(c(sample_table$Sample))
 
+```
+:::
+
+<br>
+```{r}
+#| echo: false
+#| eval: true
 feature_counts_table %>%
   head(n = 3) %>%
   kbl() %>%
   kable_styling()
 ```
+
 
 ## Differential Expression {.smaller}
 
@@ -834,7 +879,7 @@ feature_counts_table %>%
 #| echo: true
 DESeq2Table <- DESeqDataSetFromMatrix(countData = feature_counts_table,
                                       colData = sample_table,
-                                      design= ~  Condition)
+                                      design = ~  Condition)
 dds <- DESeq(DESeq2Table)
 ```
 
@@ -854,26 +899,36 @@ write_tsv(total_norm_counts,"normalised_read_counts.tsv")
 
 ### HtSeq-Count
 
+::: {style="font-size: 75%;"}
+
 Read in the feature counts for the counts files - HtSeq Counts
 
 ```{r}
 #| echo: true
-#| eval: false
-#| code-line-numbers: "1-8"
+#| eval: true
 files <- list.files("./data/htseq_counts/") %>%
   as.data.frame() %>%
   rename(Files = ".") %>%
+  mutate(Samples = Files) %>%
+  separate_wider_delim(Samples, delim = ".", names = c("Sample", NA)) %>%
   left_join(read_tsv("./data/sample_description.tsv"))
 
 sampleDataFrame <- data.frame(sampleName = files$Sample,
                       fileName = files$Files,
                       condition = files$Condition)
+```
 
+<br>
+```{r}
+#| echo: false
+#| eval: true
 sampleDataFrame %>%
   head(n = 3) %>%
   kbl() %>%
   kable_styling()
 ```
+
+:::
 
 ## Differential Expression {.smaller}
 
@@ -884,7 +939,7 @@ sampleDataFrame %>%
 #| eval: false
 DESeq2Table <- DESeqDataSetFromHTSeqCount(sampleTable = sampleDataFrame,
                                            directory = "./data/htseq_counts/",
-                                           design= ~  condition)
+                                           design = ~  condition)
 dds <- DESeq(DESeq2Table)
 ```
 
